Correct spacing of record details when an individual is clicked.

--- a/www/css/peoplefinder_default.css
+++ b/www/css/peoplefinder_default.css
@@ -148,7 +148,7 @@
 	position:relative;
 	width:425px;
 	z-index:9;
-	margin:0 auto;
+	margin:6px auto 0 auto;
 }
 .vcard > a.email {
 	
